<resources>
    <string name="app_name">보리</string>

    <string name="post_question">질문하기</string>
    <string name="post_answer">답변하기</string>
    <string name="post_question_title_hint">제목을 입력해주세요</string>
    <string name="post_question_content_hint">피드백 받고 싶은 부분에 대해 입력해주세요</string>
    <string name="post_question_upload">음성 녹음하기</string>
    <string name="dialog_record_tip">인식된 내용이 아래에 표시됩니다</string>

    <string name="time_placeholder">%1$02d:%2$02d</string>
    <string name="time_start">00:00</string>
    <string name="edit_answer_placeholder">여기를 눌러서 답변을 입력하세요</string>
    <string name="answer_placeholder">답변을 여기에 입력하세요</string>
    <string name="button_post_answer">답변 작성</string>

    <string name="button_cancel">취소</string>
    <string name="button_next">다음</string>
    <string name="button_navigate_home">홈으로</string>
    <string name="title_register_policy">이용약관</string>
    <string name="title_register">회원가입</string>
    <string name="title_profile">프로필</string>
    <string name="navigate_back">뒤로가기</string>
    <string name="text_policy_agree">모두 동의합니다.</string>
    <string name="text_location_example">서울특별시 강동구</string>
</resources>
